fixed z-index

--- a/styles/blocks/_burger-button.scss
+++ b/styles/blocks/_burger-button.scss
@@ -5,7 +5,7 @@
 
     display: inline-flex;
     margin-left: auto;
-    z-index: 10001;
+    z-index: 10;
     flex-direction:column;
     justify-content: space-between;
     padding: rem(8.5) rem(4.25);
