--- a/styles/blocks/_header.scss
+++ b/styles/blocks/_header.scss
@@ -11,7 +11,7 @@
     }
 
     &__overlay{
-        z-index: 10000;
+        z-index: 9;
         background-color: var(--color-dark);
 
         @include mobile-above {
